linked uslugi with their layouts, fixed - too big container in footer

--- a/frontend/src/sass/components/listauslug.scss
+++ b/frontend/src/sass/components/listauslug.scss
@@ -8,12 +8,12 @@
     font-family: 'Montserrat', sans-serif;
   }
   
-  .container {
+  .containeru {
     display: flex;
     height: 100vh;
   }
   
-  .section {
+  .sectionu {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -27,7 +27,7 @@
     position: relative;
   }
   
-  .section .overlay {
+  .sectionu .overlayu {
     background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
     height: 100%;
@@ -35,15 +35,15 @@
     transition: background-color .8s ease;
   }
   
-  .section .content {
+  .sectionu .contentu {
     z-index: 2;
   }
   
-  .section:hover {
+  .sectionu:hover {
     flex: 2;
   }
   
-  .section:hover .overlay {
+  .sectionu:hover .overlayu {
     background-color: rgba(0, 0, 0, 0.95);
   }
   
